# minijail

./: .clang-format  .gitignore  Android.bp  Android.mk  AndroidTest.xml  Cargo.toml  CleanSpec.mk  DIR_METADATA  HACKING  HACKING.md  LICENSE  Makefile  NOTICE  OWNERS  OWNERS.rust  OWNERS_GENERAL  PRESUBMIT.cfg  PREUPLOAD.cfg  README.md  RELEASE.md  SConstruct  TEST_MAPPING  WATCHLISTS  arch.h  bpf.c  bpf.h  build.rs  common.mk  config_parser.c  config_parser.h  config_parser_unittest.cc  dump_constants.cc  elfparse.c  elfparse.h  env.cc  env.h  gen.mk  gen_constants-inl.h  gen_constants.c  gen_constants.sh  (+75 more)
.github/: mistaken-pull-closer.yml
.github/workflows/: build-test-ci.yml  coverity.yml
debian/: changelog  control  dirs  install  rules
examples/: cat.policy  drop_privs.cpp
linux-x86/: libconstants.gen.c  libsyscalls.gen.c
policies/: cros_default_v0.policy
rust/: OWNERS
rust/minijail/: Cargo.toml
rust/minijail-sys/: Cargo.toml  build.rs  lib.rs  libminijail.rs
rust/minijail/src/: lib.rs
rust/minijail/tests/: fork_remap.rs
test/: invalid.conf  invalid_arg_filter.policy  invalid_syscall_name.policy  landlock.conf  libminijail_test.cpp  nested.policy  read_stdin  seccomp.policy  stdin_stdout.policy  valid.conf
tools/: Android.bp  README.md  arch.py  bpf.py  compile_seccomp_policy.py  compiler.py  compiler_unittest.py  generate_constants_json.py  generate_seccomp_policy.py  parser.py  parser_unittest.py  seccomp_policy_lint.py  seccomp_policy_lint_unittest.py
tools/testdata/: arch_64.json
